# baseball-report-generation

./: .gitignore  PRODUCT.md  README.md  package.json  pyproject.toml  requirements.txt
assets/: README.md
configs/: default_report_pipeline.json  final_report.example.json  pitching_manifest.example.json
docs/: ASSET_PROVENANCE.md  DESIGN.md  FINAL_REPORT_IMAGE_CHECKLIST.md  PIPELINE_ARCHITECTURE.md  PITCHING_PIPELINE.md  PITCHING_VICON_2D_ALIGNMENT.md  REPORT_README.md  VICON_VIDEO_SYNC.md  architecture.md  c3d_pipeline.md  data_flow.md  development.md  event_detection.md  final_verification.md  frontend_builders.md  mediapipe_pipeline.md  metrics_reference.md  migration_guide.md  phase3_contracts.md  phase4_characterization.md  refactor_plan.md  report_schema.md  repository_audit.md  stage10_visualization.md  stage11_cli.md  stage1_configuration.md  stage2_motion_io.md  stage3_kinematics.md  stage4_point_mappings.md  stage5_event_detection.md  stage6_metric_registry.md  stage7_pipeline_runtime.md  stage8_report_schema.md  stage9_reporting.md  target_architecture.md  troubleshooting.md  vicon_batting_csv_to_report_metrics.md
prompts/: final_report_replication.md  pitch_chart_redraw.md  pitch_report_generation.md  video_report_interpretation.md  video_report_recommendation.md
scripts/: README.md  align_2d_video_vicon.py  annotate_frontend_metric_illustrations.py  annotate_pitch_lineart_metrics.py  apply_batting_coach_values.py  build_batting_dashboard_metrics.py  build_batting_metrics_xlsx.mjs  build_benchmark_report_html.py  build_julian_coach_event_gifs.py  (+25 more)
(+105 files in other folders)
